// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Integral Symbol 1 1`] = `
[
  0.7,
  0,
  0,
  0.14845,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 1 2`] = `
[
  0.14145,
  0,
  0,
  0,
  0,
  0.2226,
  0,
  -0.0756,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 2 1`] = `
[
  0.7,
  0,
  0,
  0.11105,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 2 2`] = `
[
  0.10405,
  0,
  0,
  0,
  0,
  0.2226,
  0,
  -0.0756,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
